--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
     "@vue/eslint-config-airbnb": "^3.0.3",
+    "@vue/eslint-config-prettier": "^3.0.3",
     "vue-template-compiler": "^2.5.17"
   }
 }
